testdata/baselines/reference/submodule/conformance/jsdocTypeTagCast.errors.txt
b.js(2,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'W' must be of type 'string', but here has type 'number'.
b.js(4,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'W' must be of type 'string', but here has type 'number'.
b.js(17,14): error TS2339: Property 'p' does not exist on type 'SomeBase'.
b.js(23,14): error TS2339: Property 'x' does not exist on type 'SomeDerived'.
b.js(28,14): error TS2339: Property 'q' does not exist on type 'SomeOther'.
b.js(66,38): error TS2454: Variable 'numOrStr' is used before being assigned.
b.js(67,2): error TS2322: Type 'string | number' is not assignable to type 'string'.
  Type 'number' is not assignable to type 'string'.
b.js(67,8): error TS2454: Variable 'numOrStr' is used before being assigned.


==== a.ts (0 errors) ====
    var W: string;
    
==== b.js (8 errors) ====
    // @ts-check
    var W = /** @type {string} */(/** @type {*} */ (4));
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'W' must be of type 'string', but here has type 'number'.
!!! related TS6203 a.ts:1:5: 'W' was also declared here.
    
    var W = /** @type {string} */(4); // Error
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'W' must be of type 'string', but here has type 'number'.
!!! related TS6203 a.ts:1:5: 'W' was also declared here.
    
    /** @type {*} */
    var a;
    
    /** @type {string} */
    var s;
    
    var a = /** @type {*} */("" + 4);
    var s = "" + /** @type {*} */(4);
    
    class SomeBase {
        constructor() {
            this.p = 42;
                 ~
!!! error TS2339: Property 'p' does not exist on type 'SomeBase'.
        }
    }
    class SomeDerived extends SomeBase {
        constructor() {
            super();
            this.x = 42;
                 ~
!!! error TS2339: Property 'x' does not exist on type 'SomeDerived'.
        }
    }
    class SomeOther {
        constructor() {
            this.q = 42;
                 ~
!!! error TS2339: Property 'q' does not exist on type 'SomeOther'.
        }
    }
    
    function SomeFakeClass() {
        /** @type {string|number} */
        this.p = "bar";
    }
    
    // Type assertion should check for assignability in either direction
    var someBase = new SomeBase();
    var someDerived = new SomeDerived();
    var someOther = new SomeOther();
    var someFakeClass = new SomeFakeClass();
    
    someBase = /** @type {SomeBase} */(someDerived);
    someBase = /** @type {SomeBase} */(someBase);
    someBase = /** @type {SomeBase} */(someOther); // Error
    
    someDerived = /** @type {SomeDerived} */(someDerived);
    someDerived = /** @type {SomeDerived} */(someBase);
    someDerived = /** @type {SomeDerived} */(someOther); // Error
    
    someOther = /** @type {SomeOther} */(someDerived); // Error
    someOther = /** @type {SomeOther} */(someBase); // Error
    someOther = /** @type {SomeOther} */(someOther);
    
    someFakeClass = someBase;
    someFakeClass = someDerived;
    
    someBase = someFakeClass; // Error
    someBase = /** @type {SomeBase} */(someFakeClass);
    
    // Type assertion cannot be a type-predicate type
    /** @type {number | string} */
    var numOrStr;
    /** @type {string} */
    var str;
    if(/** @type {numOrStr is string} */(numOrStr === undefined)) { // Error
                                         ~~~~~~~~
!!! error TS2454: Variable 'numOrStr' is used before being assigned.
    	str = numOrStr; // Error, no narrowing occurred
    	~~~
!!! error TS2322: Type 'string | number' is not assignable to type 'string'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.
    	      ~~~~~~~~
!!! error TS2454: Variable 'numOrStr' is used before being assigned.
    }
    
    
    var asConst1 = /** @type {const} */(1);
    var asConst2 = /** @type {const} */({
        x: 1
    });